smoke-tester-macros/tests/ui/item-is-not-a-function.stderr
error: Can only be used on functions
 --> tests/ui/item-is-not-a-function.rs:4:1
  |
4 | struct S;
  | ^^^^^^
