smoke-tester-macros/tests/ui/item-is-not-a-function.rs
use smoke_tester_macros::test;

#[test(session)]
struct S;

fn main() {}
